--- a/package.json
+++ b/package.json
@@ -8,11 +8,13 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@burhanahmeed/vue-modal-2": "^1.1.4",
     "axios": "^0.21.1",
     "core-js": "^3.6.5",
     "jquery": "^3.5.1",
     "vue": "^2.6.11",
-    "vue-router": "^3.2.0"
+    "vue-router": "^3.2.0",
+    "vue-slider-component": "^3.2.11"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
