--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "jquery": "^3.5.1",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0",
-    "vue-slider-component": "^3.2.11"
+    "vue-slider-component": "^3.2.11",
+    "vue-template-compiler": "^2.6.12"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
