--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "core-js": "^3.6.5",
     "jquery": "^3.5.1",
     "vue": "^2.6.11",
+    "vue-color-picker": "^0.6.1",
+    "vue-colour-picker": "^0.0.5",
     "vue-multiselect": "^2.1.6",
     "vue-router": "^3.2.0",
     "vue-select": "^3.11.2",
