--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "vue-multiselect": "^2.1.6",
     "vue-router": "^3.2.0",
     "vue-select": "^3.11.2",
+    "vue-session": "^1.0.0",
     "vue-template-compiler": "^2.6.12"
   },
   "devDependencies": {
