--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "vue-router": "^3.2.0",
     "vue-select": "^3.11.2",
     "vue-session": "^1.0.0",
-    "vue-template-compiler": "^2.6.12"
+    "vue-template-compiler": "^2.6.12",
+    "vue-toasted": "^1.1.28"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
