--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "bootstrap": "^5.0.0-beta1",
     "core-js": "^3.6.5",
     "jquery": "^3.5.1",
+    "laravel-mix": "^5.0.9",
     "vue": "^2.6.11",
+    "vue-color": "^2.8.1",
     "vue-color-picker": "^0.6.1",
     "vue-colour-picker": "^0.0.5",
     "vue-multiselect": "^2.1.6",
