--- a/package.json
+++ b/package.json
@@ -12,10 +12,11 @@
     "@popperjs/core": "^2.6.0",
     "axios": "^0.21.1",
     "bootstrap": "^5.0.0-beta2",
+    "bootstrap-vue": "^2.21.2",
     "core-js": "^3.6.5",
     "jquery": "^3.5.1",
     "laravel-mix": "^5.0.9",
-    "vue": "^2.6.11",
+    "vue": "^2.6.12",
     "vue-color": "^2.8.1",
     "vue-color-picker": "^0.6.1",
     "vue-colour-picker": "^0.0.5",
