--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "vue-router": "^3.2.0",
     "vue-select": "^3.11.2",
     "vue-session": "^1.0.0",
+    "vue-spinner": "^1.0.4",
     "vue-template-compiler": "^2.6.12",
     "vue-toasted": "^1.1.28"
   },
