widget style/popups toegevoegd

--- a/package.json
+++ b/package.json
@@ -54,7 +54,9 @@
     "parserOptions": {
       "parser": "babel-eslint"
     },
-    "rules": {},
+    "rules": {
+      "no-unused-vars": "off"
+    },
     "overrides": [
       {
         "files": [
