--- a/package.json
+++ b/package.json
@@ -34,13 +34,11 @@
     "@vue/cli-plugin-babel": "~4.5.0",
     "@vue/cli-plugin-eslint": "~4.5.0",
     "@vue/cli-plugin-router": "^4.5.11",
-    "@vue/cli-plugin-unit-jest": "^4.5.11",
     "@vue/cli-service": "~4.5.0",
     "@vue/test-utils": "^1.1.3",
     "babel-eslint": "^10.1.0",
     "eslint": "^6.7.2",
-    "eslint-plugin-vue": "^6.2.2",
-    "vue-jest": "^3.0.7"
+    "eslint-plugin-vue": "^6.2.2"
   },
   "eslintConfig": {
     "root": true,
