--- a/package.json
+++ b/package.json
@@ -19,7 +19,6 @@
     "jquery": "^3.5.1",
     "laravel-mix": "^5.0.9",
     "vue": "^2.6.12",
-    "vue-advanced-search": "^0.1.43",
     "vue-color": "^2.8.1",
     "vue-color-picker": "^0.6.1",
     "vue-colour-picker": "^0.0.5",
@@ -39,8 +38,7 @@
     "@vue/test-utils": "^1.1.3",
     "babel-eslint": "^10.1.0",
     "eslint": "^6.7.2",
-    "eslint-plugin-vue": "^6.2.2",
-    "vue-jest": "^3.0.7"
+    "eslint-plugin-vue": "^6.2.2"
   },
   "eslintConfig": {
     "root": true,
